<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="vn.edu.hcmute.ms14110050.chatproject.model.register.RegisterRequest" />

        <variable
            name="viewmodel"
            type="vn.edu.hcmute.ms14110050.chatproject.module.authentication.register.RegisterViewModel" />

        <variable
            name="validation"
            type="vn.edu.hcmute.ms14110050.chatproject.module.authentication.register.RegisterValidation" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".chatproject.module.authentication.register.RegisterFragment">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--EMAIL-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    app:addErrorViewer="@{validation.emailValidator}"
                    style="@style/TextInputLayoutRegister"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/edt_email"
                        android:text="@={data.email}"
                        app:addTextWatcher="@{validation.emailValidator}"
                        style="@style/EditTextLoginView"
                        android:hint="@string/hint_email_login"/>

                </android.support.design.widget.TextInputLayout>

                <!--USERNAME-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_username"
                    app:addErrorViewer="@{validation.usernameValidator}"
                    style="@style/TextInputLayoutRegister"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/edt_username"
                        android:text="@={data.username}"
                        app:addTextWatcher="@{validation.usernameValidator}"
                        android:inputType="text"
                        style="@style/EditTextLoginView"
                        android:hint="@string/hint_username" />

                </android.support.design.widget.TextInputLayout>

                <!--FULLNAME-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_fullname"
                    app:addErrorViewer="@{validation.fullnameValidator}"
                    style="@style/TextInputLayoutRegister"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/edt_fullname"
                        android:text="@={data.fullname}"
                        app:addTextWatcher="@{validation.fullnameValidator}"
                        android:inputType="text"
                        style="@style/EditTextLoginView"
                        android:hint="@string/hint_fullname" />

                </android.support.design.widget.TextInputLayout>

                <!--PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    app:addErrorViewer="@{validation.passwordValidator}"
                    app:passwordToggleEnabled="true"
                    style="@style/TextInputLayoutRegister"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/edt_password"
                        android:text="@={data.password}"
                        app:addTextWatcher="@{validation.passwordValidator}"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password"
                        style="@style/EditTextLoginView" />

                </android.support.design.widget.TextInputLayout>

                <!--CONFIRM PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_confirm_password"
                    app:addErrorViewer="@{validation.confirmPasswordValidator}"
                    app:passwordToggleEnabled="true"
                    style="@style/TextInputLayoutRegister"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle">

                    <EditText
                        android:id="@+id/edt_confirm_password"
                        app:addTextWatcher="@{validation.confirmPasswordValidator}"
                        android:inputType="textPassword"
                        android:hint="@string/hint_confirm_password"
                        style="@style/EditTextLoginView" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/label_gender"
                    android:textColor="#fff"
                    android:textSize="@dimen/txtSize_normal_input"
                    android:layout_marginStart="@dimen/margin_left_hint_input_text"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/filter_gender"
                    app:selectedValue="@={data.gender}"
                    android:background="@drawable/bg_square_corner_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/margin_bottom_to_button_login"/>

                <Button
                    android:id="@+id/btn_submit"
                    android:enabled="@{validation.valid}"
                    android:onClick="@{(view)->viewmodel.onSubmit(data)}"
                    android:background="@{validation.valid ? @drawable/bg_button_submit : @drawable/bg_button_submit_disabled}"
                    style="@style/AutheticationSubmitButton"
                    android:text="@string/action_register"/>

                <TextView
                    android:id="@+id/txt_action_open_login"
                    android:onClick="@{viewmodel::onClickOpenLogin}"
                    android:text="@string/link_login"
                    android:textColor="@color/colorTextLink02"
                    style="@style/LinkTextViewAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/progress_view"
            android:visibility="gone"
            layout="@layout/progress_view" />

    </RelativeLayout>

</layout>