<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".chatproject.module.authentication.login.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="input"
            type="vn.edu.hcmute.ms14110050.chatproject.model.login.LoginRequest" />

        <variable
            name="viewmodel"
            type="vn.edu.hcmute.ms14110050.chatproject.module.authentication.login.LoginViewModel" />

        <variable
            name="validation"
            type="vn.edu.hcmute.ms14110050.chatproject.module.authentication.login.LoginValidation" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="@dimen/size_img_login"
                    android:layout_height="@dimen/size_img_login"
                    android:layout_marginBottom="@dimen/margin_bottom_of_img_login"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_logo_login" />

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:onClick="@{viewmodel::onClickFacebookLogin}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />

                <!--EMAIL LOGIN-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    app:addErrorViewer="@{validation.emailValidator}"
                    style="@style/TextInputLayoutLogin"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle"><!--hint khi focus-->

                    <EditText
                        android:id="@+id/edt_username"
                        android:text="@={input.email}"
                        app:addTextWatcher="@{validation.emailValidator}"
                        android:hint="@string/hint_email_login"
                        style="@style/EditTextLoginView"/>

                </android.support.design.widget.TextInputLayout>

                <!--PASSWORD-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    app:addErrorViewer="@{validation.passwordValidator}"
                    style="@style/BaseTextInputLayout"
                    android:layout_marginBottom="@dimen/margin_bottom_of_til_login"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/ErrorTextInputLayoutStyle"
                    app:hintTextAppearance="@style/TextInputLayoutStyle"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edt_password"
                        android:text="@={input.password}"
                        app:addTextWatcher="@{validation.passwordValidator}"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        style="@style/EditTextLoginView" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:enabled="@{validation.valid}"
                    android:onClick="@{(view)->viewmodel.onSubmit(input)}"
                    android:background="@{validation.valid ? @drawable/bg_button_submit : @drawable/bg_button_submit_disabled}"
                    style="@style/AutheticationSubmitButton"
                    android:text="@string/action_login"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_of_til_login">

                    <TextView
                        android:id="@+id/txt_action_open_register"
                        android:onClick="@{viewmodel::onClickLinkRegister}"
                        android:text="@string/link_open_register"
                        style="@style/LinkTextViewAuth"
                        android:textColor="@color/colorTextLink02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/progress_view"
            android:visibility="gone"
            layout="@layout/progress_view" />

    </RelativeLayout>

</layout>